Fix: Usar rutas relativas para compatibilidad con GitHub Pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Granja Avícola Ecológica</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,12 +18,12 @@
     <!-- 1. Hero Section (Image/Video + Centered Logo) -->
     <section class="hero-intro">
         <div class="hero-bg">
-            <img src="/images/hero_bg.png" alt="Bosque Granja" class="hero-image">
+            <img src="images/hero_bg.png" alt="Bosque Granja" class="hero-image">
         </div>
 
         <div class="hero-content">
             <div class="logo-wrapper">
-                <img src="/images/logo_clean.png" alt="Libreavedrio Graphic" class="main-logo-graphic" width="1118"
+                <img src="images/logo_clean.png" alt="Libreavedrio Graphic" class="main-logo-graphic" width="1118"
                     height="295">
                 <p class="logo-subtitle">Granja avícola ecológica Sierra Norte de Madrid</p>
             </div>
@@ -56,13 +56,13 @@
                                 <span class="tape-corner top-left"></span>
                                 <span class="tape-corner bottom-right"></span>
                                 <div class="polaroid-image-container">
-                                    <img src="/images/granja_1.png" alt="Granja Libreavedrio" title="Keila y Tamayo"
+                                    <img src="images/granja_1.png" alt="Granja Libreavedrio" title="Keila y Tamayo"
                                         class="polaroid-img active">
-                                    <img src="/images/granja_2.jpg" alt="Interior Naves" title="Nuestras Naves"
+                                    <img src="images/granja_2.jpg" alt="Interior Naves" title="Nuestras Naves"
                                         class="polaroid-img">
-                                    <img src="/images/granja_3.png" alt="Exterior" title="Entorno Natural"
+                                    <img src="images/granja_3.png" alt="Exterior" title="Entorno Natural"
                                         class="polaroid-img">
-                                    <img src="/images/granja_4.png" alt="Gallinas" title="Bienestar Animal"
+                                    <img src="images/granja_4.png" alt="Gallinas" title="Bienestar Animal"
                                         class="polaroid-img">
                                 </div>
                                 <div class="polaroid-caption">Keila y Tamayo</div>
@@ -154,7 +154,7 @@
                         </a>
                     </div>
                     <div class="map-image-wrapper">
-                        <img src="/images/mapa_zona.png" alt="Mapa de acceso Libreavedrio" class="map-image-sketch">
+                        <img src="images/mapa_zona.png" alt="Mapa de acceso Libreavedrio" class="map-image-sketch">
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <img src="/images/logo_clean.png" alt="Libreavedrio Footer" class="footer-logo-small" id="footer-logo-top">
+            <img src="images/logo_clean.png" alt="Libreavedrio Footer" class="footer-logo-small" id="footer-logo-top">
             <p>Piñuécar-Gandullas, Madrid</p>
             <p>hola@libreavedrio.com</p>
             <div class="footer-legal">
@@ -238,7 +238,7 @@
         </div>
     </footer>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
